Test git : add console.log to html

--- a/index-day8.html
+++ b/index-day8.html
@@ -104,6 +104,7 @@
             //มี key ที่เป็น title อยู่ วน key title ออกมาโชว์
             }
             // console.log(json);
+            console.log('This is from git');
         }
         getData()
         //ใส่ await code ถึงจะทำงาน บน ลง ล่าง ตามลำดับ แต่ถ้าไม่ใส่ await จะทำงานที่ clg ที่ไม่ต้องรอข้อมูลก่อนเรียนว่า synchronous
