Test branch : add console.log

--- a/index-day8.html
+++ b/index-day8.html
@@ -105,6 +105,7 @@
             }
             // console.log(json);
             console.log('This is from git');
+            console.log('This is from branch feature');
         }
         getData()
         //ใส่ await code ถึงจะทำงาน บน ลง ล่าง ตามลำดับ แต่ถ้าไม่ใส่ await จะทำงานที่ clg ที่ไม่ต้องรอข้อมูลก่อนเรียนว่า synchronous
